use agent as spinalDependency
